fixed mobile post title size and alignment

--- a/containers/styles/blog-post.module.css
+++ b/containers/styles/blog-post.module.css
@@ -2,8 +2,19 @@
   margin-top: 100px;
 }
 
+.title {
+  font-size: 3.5rem;
+}
+
 @media (max-width: 992px) {
   .postSidebar {
     margin-top: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 3.2rem;
+    text-align: center;
   }
 }
